Code cleanup (#358)